--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <form action="indexPost.html" method="Post">
+        <form action="" method="Post">
             <section>
                 <label for="username">Username: </label>
                 <input type="text" name="username">
