--- a/indexPost.html
+++ b/indexPost.html
@@ -12,8 +12,8 @@
     <main id="indexMain">
         
     </main>
-    <form id="indexForm" action="" method="post">
-        <input type="text">
+    <form id="indexForm" action="" method="get">
+        <textarea></textarea>
         <button type="submit">Submit</button>
     </form>
 </body>
