--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label for="passWord">Password:&nbsp;</label>
                 <input type="password" name="passWord">
                 <button type="submit">Log In</button>
-                <button>Register</button>
+                <button type="submit" name="register" value="register">Register</button>
             </section>
         </form>
     </main>
