--- a/indexPost.html
+++ b/indexPost.html
@@ -10,7 +10,7 @@
 
 <body id="indexPost">
     <main id="indexMain">
-        
+     <a href="localhost:8888" id="logout">Logout</a>
     </main>
     <form id="indexForm" action="" method="get">
         <textarea></textarea>
